<resources>
    <string name="app_name">Homework Reminder</string>
    <string name="main_title">Main Title</string>
    <string name="sub_title">Sub Title</string>
    <string name="add_class">Add Class</string>
    <string name="view_assignments">View</string>
    <string name="tasks">Tasks</string>
    <string name="BtoC"><![CDATA[<- Back to Classes]]></string>
    <string name="due_date">Due Date</string>
    <string name="priorityd">PRIORITY:</string>
    <string name="task_name">Task Name</string>
    <string name="named">NAME:</string>
    <string name="priority_level">Priority Level</string>
    <string name="dued">DUE:</string>
    <string name="delete">Delete</string>
    <string name="image">Image</string>
    <string name="add_task">Add Task</string>


</resources>